# SimAI

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.ja.md  README.md
SimCCL/: README_MockNCCL.md
SimCCL/makefiles/: version.mk
SimCCL/src/: Makefile  channel.cc  collectives.cc  debug.cc  enqueue.cc  group.cc  init.cc  nccl.h.in
SimCCL/src/device/: all_reduce.h  prims_simple.h  sendrecv.h
SimCCL/src/graph/: connect.cc  paths.cc  rings.cc  search.cc  topo.cc  topo.h  tuning.cc
SimCCL/src/include/: align.h  comm.h  graph.h  nccl_common.h  param.h
SimCCL/src/misc/: param.cc
SimCCL/src/transport/: net.cc  net_ib.cc
SimCCL/test/: Makefile  MultiDevOneP.cc  run.sh  topo_1A100_1CX6.xml  topo_2A100_1CX6.xml  topo_4A100_2CX6.xml  topo_8A100_4CX6.xml
SimCCL/tools/: alltoall.csv  draw_channels.py
astra-sim-alibabacloud/: CMakeLists.txt  LICENSE  build.sh
astra-sim-alibabacloud/astra-sim/network_frontend/analytical/: AnaSim.cc  AnaSim.h  AnalyticalAstra.cc  AnalyticalNetwork.cc  AnalyticalNetwork.h  CMakeLists.txt
astra-sim-alibabacloud/astra-sim/network_frontend/ns3/: AstraSimNetwork.cc  AstraSimNetwork.h  common.h  config.h  entry.h
astra-sim-alibabacloud/astra-sim/network_frontend/phynet/: CMakeLists.txt  PhySimAi.cc  PhySimAi.h  SimAiEntry.cc  SimAiEntry.h  SimAiMain.cc  SimAiPhyNetwork.cc  SimAiPhyNetwork.h
astra-sim-alibabacloud/astra-sim/system/: AstraComputeAPI.hh  AstraNetworkAPI.hh  AstraParamParse.cc  AstraParamParse.hh  AstraSimDataAPI.hh  BaseStream.cc  BaseStream.hh  BasicEventHandlerData.cc  BasicEventHandlerData.hh  BootStrapnet.cc  BootStrapnet.hh  CollectivePhase.cc  Common.hh  DataSet.cc  DataSet.hh  IntData.hh  LogGP.cc  MemBus.cc  MemBus.hh  MemMovRequest.cc  MemMovRequest.hh  MockNccl.h  MockNcclChannel.cc  MockNcclChannel.h  MockNcclGroup.cc  MockNcclGroup.h  MockNcclLog.cc  MockNcclLog.h  MockNcclQps.h  MyPacket.cc  MyPacket.hh  PacketBundle.cc  PacketBundle.hh  PhyMultiThread.cc  PhyMultiThread.hh  QueueLevelHandler.cc  QueueLevelHandler.hh  QueueLevels.hh  RecvPacketEventHadndlerData.cc  RecvPacketEventHadndlerData.hh  (+17 more)
astra-sim-alibabacloud/astra-sim/system/collective/: Algorithm.cc  Algorithm.hh  AllToAll.cc  AllToAll.hh  DoubleBinaryTreeAllReduce.cc  DoubleBinaryTreeAllReduce.hh  HalvingDoubling.cc  HalvingDoubling.hh  NcclTreeFlowModel.cc  NcclTreeFlowModel.hh  Ring.cc  Ring.hh
astra-sim-alibabacloud/astra-sim/system/fast-backend/: FastBackEnd.cc  FastBackEnd.hh
astra-sim-alibabacloud/astra-sim/system/memory/: SimpleMemory.cc  SimpleMemory.hh
astra-sim-alibabacloud/astra-sim/system/scheduling/: OfflineGreedy.cc  OfflineGreedy.hh
astra-sim-alibabacloud/astra-sim/system/topology/: BasicLogicalTopology.hh  BinaryTree.cc  BinaryTree.hh  ComplexLogicalTopology.hh  DoubleBinaryTreeTopology.cc  DoubleBinaryTreeTopology.hh  GeneralComplexTopology.cc  GeneralComplexTopology.hh  LocalRingGlobalBinaryTree.hh  LocalRingNodeA2AGlobalDBT.hh  LogicalTopology.cc  LogicalTopology.hh  Node.hh  RingTopology.cc  RingTopology.hh  Torus3D.hh
astra-sim-alibabacloud/astra-sim/workload/: CSVWriter.cc  CSVWriter.hh  Layer.cc  Layer.hh  Workload.cc  Workload.hh
astra-sim-alibabacloud/inputs/config/: SimAI.conf
astra-sim-alibabacloud/inputs/ratio/: ata_ratio.csv  nic_ratio.csv  nvlink_ratio.csv
astra-sim-alibabacloud/inputs/topo/: gen_HPN_7.0_topo_mulgpus_one_link.py  gen_Topo_Template.py
docs/: Tutorial.md
example/: busbw.yaml  microAllReduce.txt  workload_analytical.txt
scripts/: build.sh
vidur-alibabacloud/: .gitignore  README-vidur.md  README.md  requirements.txt
vidur-alibabacloud/vidur/: simulator.py
vidur-alibabacloud/vidur/config/: config.py  device_sku_config.py  model_config.py  node_sku_config.py
vidur-alibabacloud/vidur/entities/: __init__.py  batch.py  cluster.py  execution_time.py  flow.py  interconnect.py  node.py  processor.py  replica.py  request.py  task.py
vidur-alibabacloud/vidur/events/: batch_end_event.py  batch_stage_arrival_event.py  batch_stage_end_event.py  global_schedule_event.py  replica_schedule_event.py  replica_stage_schedule_event.py  request_arrival_event.py
vidur-alibabacloud/vidur/execution_time_predictor/: SimAIWorkload.py  base_execution_time_predictor.py  communication_time_predictor.py  random_forrest_execution_time_predictor.py  sklearn_execution_time_predictor.py
vidur-alibabacloud/vidur/metrics/: constants.py  metrics_store.py
vidur-alibabacloud/vidur/profiling/collectives/: benchmark_runner.py  collectives_impl.py  collectives_wrapper.py  main.py
vidur-alibabacloud/vidur/profiling/common/: cuda_timer.py
vidur-alibabacloud/vidur/profiling/mlp/: mlp_impl.py
vidur-alibabacloud/vidur/request_generator/: synthetic_request_generator.py
vidur-alibabacloud/vidur/scheduler/global_scheduler/: base_global_scheduler.py  global_scheduler_registry.py  lor_global_scheduler.py  random_global_scheduler.py  round_robin_global_scheduler.py  splitwise_global_scheduler.py
vidur-alibabacloud/vidur/scheduler/replica_scheduler/: base_replica_scheduler.py  replica_scheduler_registry.py  sarathi_replica_scheduler.py  splitwise_replica_scheduler.py  vllm_replica_scheduler.py
vidur-alibabacloud/vidur/scheduler/replica_stage_scheduler/: replica_stage_schduler.py
vidur-alibabacloud/vidur/types/: activation_type.py  device_sku_type.py  global_scheduler_type.py  node_sku_type.py  replica_scheduler_type.py
vidur-alibabacloud/vidur/utils/: base_registry.py
